refactor: перейти на Hibernate с Sql2o